Fixed some animation and dark mode issues

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,7 @@
+html {
+	scroll-behavior: smooth;
+}
+
 /* PAGE PRODUIT************************************************PAGE PRODUIT */
 /* PAGE PRODUIT************************************************PAGE PRODUIT */
 .bodySPProductPage {
@@ -176,7 +180,15 @@
   visibility: hidden;
 }
 
-/* .main-sp{
+@media only screen and (max-width : 768px) {
+
+  .SP-Header-NavBar {
+    background-color: transparent !important;
+  }
+
+}
+
+/* .main-sp{rgba(103, 63, 105, 0)
     height: 100vh;
     background-image: url(./Img/Img-SpacePionner/Accueil.png);
   } */
@@ -3997,32 +4009,48 @@ button {
       margin-left: 0rem;
       border-radius: 10px;
     }
-  }
-  @media (prefers-color-scheme: dark){
-      .SP-Header-NavBar,.Background-Contact,.sectionEquipeSP p,.SP-Footer{
-        background-color: rgba(47, 28, 48, 0.856);
-      }
-      .bodySP a,.bodySP h1,.bodySP p,.bodySP h2,.bodySP h3{
-        color: #a5a5a5;
-      }
-      .formContactSP input,.formContactSP textarea{
-        background-color: #a5a5a5;
-      }
-      .NumeroDuhaut{
-        box-shadow: 0px 0px 15px #802c45dc;
-      }
-      .formContactSP button{
-        background-color: #802c45dc;
-        color: #a5a5a5;
-        border-color: #a5a5a5;
-      }
-      .SP-Sponsor{
-        background: linear-gradient(90deg, rgb(119, 80, 8) 0%, rgba(110, 75, 8, 0.747) 50%, rgb(119, 80, 8) 100%);
-      }
-      svg{
-        fill: #ad362d;
-      }
-      .sectionAccueilSP,.SP-Logo,.sectionAProposSP,.sectionAProposSP img,.sectionEquipeSP,.ContactFiche-SP,.SP-footer-burger,#HeaderIMG,#AproposR,#MesExperiencesR,#MesProjetsR,#ContactR,#Footer{
-        filter: grayscale(40%);
-      }
-  }
+}
+
+
+@media (prefers-color-scheme: dark){
+    .SP-Header-NavBar,.Background-Contact,.sectionEquipeSP p,.SP-Footer{
+      background-color: rgba(47, 28, 48, 0.856);
+    }
+    .bodySP a,.bodySP h1,.bodySP p,.bodySP h2,.bodySP h3{
+      color: #a5a5a5;
+    }
+    .formContactSP input,.formContactSP textarea{
+      background-color: #a5a5a5;
+    }
+    .NumeroDuhaut{
+      box-shadow: 0px 0px 15px #802c45dc;
+    }
+    .formContactSP button{
+      background-color: #802c45dc;
+      color: #a5a5a5;
+      border-color: #a5a5a5;
+    }
+    .SP-Sponsor{
+      background: linear-gradient(90deg, rgb(119, 80, 8) 0%, rgba(110, 75, 8, 0.747) 50%, rgb(119, 80, 8) 100%);
+    }
+    svg{
+      fill: #ad362d;
+    }
+    .sectionAccueilSP,
+    .SP-Logo,
+    .sectionAProposSP,
+    .sectionAProposSP img,
+    .sectionEquipeSP,
+    .ContactFiche-SP,
+    .SP-Sponsor,
+    #HeaderIMG,
+    #AproposR,
+    #MesExperiencesR,
+    #MesProjetsR,
+    #ContactR,
+    #Footer,
+    .SP-Header-NavBar,
+    .mainSPProductPage{
+      filter: grayscale(40%);
+    }
+}
